<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Zyro Sample Pay</string>
    <string name="login_title">Sign in</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_otp">OTP (6 digits)</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify">Verify</string>
    <string name="register_link">Create account</string>
    <string name="register_title">Register</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="terms_label">I agree to the terms (mock)</string>
    <string name="register">Register</string>
    <string name="back">Back to login</string>
    <string name="p2p_title">Send money</string>
    <string name="p2p_pick_contact">Choose a contact</string>
    <string name="p2p_instrument">Funding source</string>
    <string name="instrument_1">Mock checking</string>
    <string name="instrument_2">Mock savings</string>
    <string name="instrument_3">Mock wallet</string>
    <string name="instrument_4">Mock rewards</string>
    <string name="instrument_5">Mock credit</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_note">Note (optional)</string>
    <string name="send_money">Send</string>
    <string name="profile_title">Profile</string>
    <string name="profile_mock_user">Signed in as mock user</string>
    <string name="profile_marketing">Marketing notifications</string>
    <string name="sheet_confirm_title">Confirm transfer</string>
    <string name="sheet_confirm_message">Send this mock transfer?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="a11y_phone_field">Phone number for login</string>
    <string name="a11y_send_otp">Send one time password to phone</string>
    <string name="a11y_otp_field">One time password entry</string>
    <string name="a11y_verify_otp">Verify login code</string>
    <string name="a11y_open_register">Open registration screen</string>
    <string name="a11y_register_name">Registration full name</string>
    <string name="a11y_register_email">Registration email</string>
    <string name="a11y_register_password">Registration password</string>
    <string name="a11y_terms_checkbox">Accept terms and conditions</string>
    <string name="a11y_submit_register">Submit registration</string>
    <string name="a11y_back_to_login">Navigate back to login</string>
    <string name="a11y_contact_list">Scrollable list of transfer contacts</string>
    <string name="a11y_p2p_toolbar">Peer to peer screen toolbar</string>
    <string name="a11y_marketing_toggle_label">Marketing notifications label</string>
    <string name="a11y_marketing_switch">Toggle marketing notifications</string>
    <string name="a11y_sheet_confirm">Confirm transfer in bottom sheet</string>
    <string name="a11y_sheet_cancel">Cancel transfer in bottom sheet</string>
</resources>
